Исправлены ошибки после код-ревью

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         />
       </a>
 
-      <div class="address header__address">
-        <a href="tel:+99995555555" class="address-link phone-number"
+      <address class="address header__address">
+        <a href="tel:+99995555555" class="address-link"
           >+9 999 555 5555</a
         ><br />
         <a href="mailto:info@sobaka.ge" class="address-link">info@sobaka.ge</a
-        ><br />
-        наб. Принсенграхт 263- 265, Амстердам
-      </div>
+        >
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
     </header>
 
     <main>
@@ -65,9 +65,9 @@
         </h1>
 
         <div class="cover__description">
-          <span class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</span
-          >
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
 
           <button class="bet-button">сделать ставку</button>
         </div>
@@ -128,7 +128,7 @@
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков<span style="letter-spacing: 0.13em">...</span> Сколько
+                  котиков... Сколько
                   бы вы на такое поставили, если бы не знали, что это — одна из
                   революционных работ Кандинского?
                 </p>
@@ -174,21 +174,17 @@
               <span style="letter-spacing: 0em">любителями?</span>
             </p>
 
-            <p class="second-paragraph">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            <p>
+              <span style="letter-spacing: 0">Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то
-              <span style="letter-spacing: 0.04em">они</span> казались просто
-              <span style="letter-spacing: 0.01em">неудачными.</span> Но,
-              несмотря на критику, кажущуюся простоту или сложность, сейчас без
-              этих<span style="letter-spacing: -0.1em"> </span>лотов невозможно
-              <span style="letter-spacing: 0.01em"
-                >представить современную культуру. </span
-              >Когда в эти вещи не
-              <span style="letter-spacing: 0.01em"> </span>верил никто,
-              продолжали верить
-              <span style="letter-spacing: 0.01em">их создатели.</span> И сейчас
-              эти лоты стали культовыми.
+              непонятые. Когда-то</span>
+              <span style="letter-spacing: 0.04em">они</span>
+              <span style="letter-spacing: 0"> казались просто </span>неудачными. 
+              <span style="letter-spacing: 0">Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих</span><span style="letter-spacing: -0.1em"> </span>
+              <span style="letter-spacing: 0">лотов невозможно</span> представить современную культуру. 
+              <span style="letter-spacing: 0">Когда в эти вещи не</span> 
+              <span style="letter-spacing: 0">верил никто, продолжали верить</span> их создатели.
+              <span style="letter-spacing: 0"> И сейчас эти лоты стали культовыми.</span> 
             </p>
           </div>
         </div>
@@ -196,14 +192,14 @@
     </main>
 
     <footer class="footer">
-      <div class="address">
-        <a href="tel:+99995555555" class="address-link phone-number"
+      <address class="address">
+        <a href="tel:+99995555555" class="address-link"
           >+9 999 555 5555</a
         ><br />
         <a href="mailto:info@sobaka.ge" class="address-link">info@sobaka.ge</a
-        ><br />
-        наб. Принсенграхт 263- 265, Амстердам
-      </div>
+        >
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
 
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -225,7 +221,7 @@
 
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a href="#0" class="footer__social-link" target="_blank">
             <img
               src="./images/yt.svg"
               alt="Ссылка на YouTube"
@@ -235,7 +231,7 @@
         </li>
 
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a href="#0" class="footer__social-link" target="_blank">
             <img
               src="./images/vk.svg"
               alt="Ссылка на ВКонтакте"
@@ -245,7 +241,7 @@
         </li>
 
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a href="#0" class="footer__social-link" target="_blank">
             <img
               src="./images/pinterest.svg"
               alt="Ссылка на Pinterest"
