Перенесены стили из HTML файла в CSS

--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
       </a>
 
       <address class="address header__address">
-        <a href="tel:+99995555555" class="address-link"
-          >+9 999 555 5555</a
+        <a href="tel:+99995555555" class="address-link">+9 999 555 5555</a
         ><br />
-        <a href="mailto:info@sobaka.ge" class="address-link">info@sobaka.ge</a
-        >
+        <a href="mailto:info@sobaka.ge" class="address-link">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
@@ -128,9 +126,8 @@
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько
-                  бы вы на такое поставили, если бы не знали, что это — одна из
-                  революционных работ Кандинского?
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
                 </p>
               </article>
             </a>
@@ -156,35 +153,46 @@
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное
-              <span style="letter-spacing: 0"
+              <span class="accent-span-zero"
                 >пафосное собрание невероятно дорогого антиквариата.
               </span>
-              <span style="letter-spacing: 0.02em">Наши</span> лоты вообще не
-              <span style="letter-spacing: 0">должны</span>
-              <span style="letter-spacing: -0.01em">были попасть </span>
-              <span style="letter-spacing: 0">ни на один </span>аукцион.
-              <span style="letter-spacing: 0"> Потому что кому нужен </span>
-              <span style="letter-spacing: 0.03em">дневник</span>
-              <span style="letter-spacing: 0"
+              <span class="accent-span-2percent">Наши</span> лоты вообще не
+              <span class="accent-span-zero">должны</span>
+              <span class="accent-span-negative">были попасть </span>
+              <span class="accent-span-zero">ни на один </span>аукцион.
+              <span class="accent-span-zero"> Потому что кому нужен </span>
+              <span class="accent-span-3percent">дневник</span>
+              <span class="accent-span-zero"
                 >девочки-подростка или картина, которую может
               </span>
-              <span style="letter-spacing: 0.02em">нарисовать</span> даже
-              <span style="letter-spacing: 0">ребёнок? Кому нужны </span>все эти
+              <span class="accent-span-2percent">нарисовать</span> даже
+              <span class="accent-span-zero">ребёнок? Кому нужны </span>все эти
               странные вещи, созданные
-              <span style="letter-spacing: 0em">любителями?</span>
+              <span class="accent-span-zero">любителями?</span>
             </p>
 
             <p>
-              <span style="letter-spacing: 0">Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то</span>
-              <span style="letter-spacing: 0.04em">они</span>
-              <span style="letter-spacing: 0"> казались просто </span>неудачными. 
-              <span style="letter-spacing: 0">Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих</span><span style="letter-spacing: -0.1em"> </span>
-              <span style="letter-spacing: 0">лотов невозможно</span> представить современную культуру. 
-              <span style="letter-spacing: 0">Когда в эти вещи не</span> 
-              <span style="letter-spacing: 0">верил никто, продолжали верить</span> их создатели.
-              <span style="letter-spacing: 0"> И сейчас эти лоты стали культовыми.</span> 
+              <span class="accent-span-zero"
+                >Слишком сложные или, наоборот, слишком простые. Опережающие
+                своё время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то</span
+              >
+              <span class="accent-span-4percent">они</span>
+              <span class="accent-span-zero"> казались просто </span>неудачными.
+              <span class="accent-span-zero"
+                >Но, несмотря на критику, кажущуюся простоту или сложность,
+                сейчас без этих</span
+              ><span class="accent-span-negative-10percent"> </span>
+              <span class="accent-span-zero">лотов невозможно</span> представить
+              современную культуру.
+              <span class="accent-span-zero">Когда в эти вещи не</span>
+              <span class="accent-span-zero"
+                >верил никто, продолжали верить</span
+              >
+              их создатели.
+              <span class="accent-span-zero">
+                И сейчас эти лоты стали культовыми.</span
+              >
             </p>
           </div>
         </div>
@@ -193,11 +201,9 @@
 
     <footer class="footer">
       <address class="address">
-        <a href="tel:+99995555555" class="address-link"
-          >+9 999 555 5555</a
+        <a href="tel:+99995555555" class="address-link">+9 999 555 5555</a
         ><br />
-        <a href="mailto:info@sobaka.ge" class="address-link">info@sobaka.ge</a
-        >
+        <a href="mailto:info@sobaka.ge" class="address-link">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
 
